# wearable-ndk

./: .gitignore  README.md
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  run.py
entry/src/main/cpp/common/: native_common.h
entry/src/main/cpp/manager/: plugin_manager.cpp  plugin_manager.h
entry/src/main/cpp/render/: egl_core_shader.cpp  egl_core_shader.h  plugin_render.cpp  plugin_render.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/components/: AnimatedText.ets  ArcButtonComponent.ets
entry/src/main/ets/constants/: CommonContants.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets  MenuPage.ets  NavigationRouter.ets  SplashPage.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: main_pages.json
entry/src/main/resources/dark/element/: color.json
entry/src/mock/: Libentry.mock.ets
